--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" href="style.css" /> <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&family=Gupter:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>MOTIVACIONAIS</title>
+    <title>Maryflix</title>
 </head>
 
 <body>
 
-    <header>MOTIVACIONAIS</header>
+    <header>Maryflix</header>
 
     <section class="chamada">
         <div  class="chamada-texto">
